dev/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: form-k8s-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /dev/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: front-training-app
                port:
                  number: 80
          - path: /dev/api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: back-training-app
                port:
                  number: 80
